# Birthday_Reminder

./: README.md  pyproject.toml  setup.py
bd/: db_sqlite.py
src/: main.py
