[tool.poetry]
name = "birthday-reminder"
version = "0.1.0"
description = ""
authors = [" GenyaElamkov < GenyaElamkov@gmail.com>"]
readme = "README.md"
packages = [{include = "birthday_reminder"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
